# icu

cmake/: CMakeLists.txt  gen-build.sh  minitest.cpp
eng/: Versions.props  icu.mk
